13-ingress-api/nginx-ic-and-appgw/akkc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akkc-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akkc-service
                port:
                  number: 80

    - host: email.theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 80

    - host: support.theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: support-service
                port:
                  number: 80
